# Pomodoro-Desktop

./: CMakeLists.txt  GuiApplication.cpp  GuiApplication.h  README.md  main.cpp  resources.qrc
CommonComponent/: CMakeLists.txt  CustomIconButton.qml  CustomTextField.qml  CustomToggle.qml  LoadingAnimation.qml
Controller/: BaseController.h  ServiceController.cpp  ServiceController.h  SystemController.cpp  SystemController.h
Controller/Module/: BaseModuleController.h  LoginModuleController.cpp  LoginModuleController.h
Controller/ModuleController/: BaseModuleController.h  LoginModuleController.cpp  LoginModuleController.h
Controller/ServiceController/: ServiceController.cpp  ServiceController.h
Controller/System/: ServiceController.cpp  ServiceController.h  UiSystemController.cpp  UiSystemController.h
Core/Helper/: ControllerHelper.h
Core/Helper/Firebase/: FirebaseHandlerHelper.h  FirebaseRequestHelper.h
Core/Manager/: ControllerManager.cpp  ControllerManager.h
ExternalModule/: CMakeLists.txt
ExternalModule/ServiceProto/: Authentication.pb.cc  Authentication.pb.h
ExternalModule/x64-windows/debug/lib/: libprotobuf-lited.lib  libprotobufd.lib  libprotocd.lib
ExternalModule/x64-windows/lib/: libprotobuf-lite.lib  libprotobuf.lib  libprotoc.lib
Handler/: AbstractMessageHandler.h
Handler/Firebase/: FirebaseRequestHandler.cpp  FirebaseRequestHandler.h  FirebaseResponseHandler.cpp  FirebaseResponseHandler.h
Handler/Firebase/MessageProcessor/: FirebaseRequestProcessor.cpp  FirebaseRequestProcessor.h  FirebaseResponseProcessor.cpp  FirebaseResponseProcessor.h
HomeScreen/: CMakeLists.txt  HomeScreen.qml  qmldir
LoginScreen/: AccountPage.qml  AccountPanel.qml  CMakeLists.txt  EnterYourEmailPage.qml  ForgotPasswordPanel.qml  LoginPanel.qml  LoginScreen.qml  OTPVerificationPage.qml  PasswordPage.qml  PasswordPanel.qml  PasswordResetSuccessPage.qml  ResetPasswordPage.qml  ThankyouPage.qml  UserRegistrationPanel.qml
LoginScreen/Panels/: ForgotPasswordPanel.qml  LoginPanel.qml  UserRegistrationPanel.qml
LoginScreen/Panels/Pages/: AccountPage.qml  PasswordPage.qml  ThankyouPage.qml
Model/Authentication/: UserModel.cpp  UserModel.h
Resources/: theme.json
Service/: CMakeLists.txt  IBaseService.h  IBaseServiceListener.h  ServiceUtils.h
Service/FirebaseService/: CMakeLists.txt  FirebaseUtils.h
Service/FirebaseService/Implementation/: FirebaseApp.cpp  FirebaseApp.h  FirebaseConfig.cpp  FirebaseConfig.h  FirebaseHelper.h  FirebaseListenerManager.cpp  FirebaseListenerManager.h  FirebasePayloadFactory.cpp  FirebasePayloadFactory.h  FirebaseServiceImpl.cpp  FirebaseServiceImpl.h
Service/FirebaseService/Implementation/Authentication/: AbstractExternalAuthProvider.h  AbstractInternalAuthProvider.h  EmailPwAuthProvider.cpp  EmailPwAuthProvider.h  FirebaseAuthentication.cpp  FirebaseAuthentication.h  GoogleAuthProvider.cpp  GoogleAuthProvider.h  GoogleOAuth.cpp  GoogleOAuth.h
Service/FirebaseService/Implementation/FirebaseGateway/: AuthWrapper.cpp  AuthWrapper.h  FirebaseGatewayManager.cpp  FirebaseGatewayManager.h  FirebaseSender.cpp  FirebaseSender.h  GoogleOAuthWrapper.cpp  GoogleOAuthWrapper.h  OAuthWrapper.h
Service/FirebaseService/Implementation/Helper/: FirebaseConfigHelper.h  FirebaseFactoryHelper.h  FirebaseGatewayHelper.h
Service/FirebaseService/Implementation/Listener/: FirebaseAuthListenerImpl.cpp  FirebaseAuthListenerImpl.h
Service/FirebaseService/Interface/: IFirebaseAuthListener.h  IFirebaseService.h
Service/GatewayService/: CMakeLists.txt  GatewayService.cpp  GatewayService.h  GatewayServiceApiReceiver.cpp  GatewayServiceApiReceiver.h  GatewayServiceApiSender.cpp  GatewayServiceApiSender.h
Service/GatewayService/MessageHandler/: ClientMessageQueueHandler.cpp  ClientMessageQueueHandler.h  ServerMessageQueueHandler.cpp  ServerMessageQueueHandler.h
Service/GatewayService/MessageProcessor/: ClientMessageProcessor.cpp  ClientMessageProcessor.h  ServerMessageProcessor.cpp  ServerMessageProcessor.h
Service/GatewayService/interface/: IGatewayService.h  IGatewayServiceApiReceiver.h  IGatewayServiceApiSender.h
Service/ServiceManager/: CMakeLists.txt  ServiceConcreteHelper.h  ServiceManager.cpp  ServiceManager.h
Service/ServiceManager/Manager/: ServiceManager.cpp  ServiceManager.h
Service/ServiceManager/interface/: IService.h  IServiceManager.h
Service/ServiceUsage/api/Gateway/: Authentication.proto
ThemeConfig/: CMakeLists.txt  ColorPalette.cpp  ColorPalette.h  FontPalette.cpp  FontPalette.h  ThemeConfig.cpp  ThemeConfig.h  ThemeResources.qrc  resources.qrc
ThemeConfig/Resources/: theme.json
ThemeConfig/Utils/: ThemeDefined.h
Utils/: CommonSettingsDefine.h
Utils/CloudUtility/: AuthenticationType.h  FirebaseUtility.h
